Work on docker web app (forgot to commit)

--- a/infrastructure/.env
+++ b/infrastructure/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb://localhost:27017
 ELASTICSEARCH_URI=http://localhost:9200
 MEMCACHED_URI=localhost:11211
-MONGO_DB=api-db
+MONGO_DB=mongo_db_node_01
 MONGO_COLLECTION=routes
 ELASTICSEARCH_URL = ELASTICSEARCH_URI
 ELASTICSEARCH_USERNAME = "elastic"
