--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -19,6 +19,13 @@ x-memcached-healthcheck: &memcached-healthcheck
     retries: 60
 
 services:
+  server:
+    image: serv:latest
+    ports:
+      - "8000:8080"
+    networks:
+      - elasticnet
+
   mongo_db_node_01:
     image: mongo:7.0.2
     <<: [ *mongodb-healthcheck ]
@@ -62,7 +69,7 @@ services:
       mongo_db_node_03:
         condition: service_healthy
     volumes:
-      - ./init-mongo.js:/infrastructure/init-mongo.js:ro
+      - init-mongo.js:/infrastructure/init-mongo.js
     entrypoint: [ "mongosh", "--host", "host.docker.internal", "--port", "27017", "--file", "/infrastructure/init-mongo.js"]
 
   elasticsearch_node_main:
@@ -94,7 +101,7 @@ services:
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=elasticsearch-master,elasticsearch-data2,elasticsearch-data3
       - node.roles=data
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx2048m"
       - xpack.security.enabled=false
     volumes:
       - elasticdata1:/usr/share/elasticsearch/data
@@ -108,7 +115,7 @@ services:
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=elasticsearch-master,elasticsearch-data1,elasticsearch-data3
       - node.roles=data
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx2048m"
       - xpack.security.enabled=false
     volumes:
       - elasticdata2:/usr/share/elasticsearch/data
@@ -122,7 +129,7 @@ services:
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=elasticsearch-master,elasticsearch-data1,elasticsearch-data2
       - node.roles=data
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx2048m"
       - xpack.security.enabled=false
     volumes:
       - elasticdata3:/usr/share/elasticsearch/data
